# lp-esb-rx-with-ble

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
sdk_changes/v2.9.0/nrf/subsys/esb/: esb.c
src/: main.c
src/mpsl_esb/: CMakeLists.txt  Kconfig.mpsl_esb  app_esb.c  app_esb.h  app_mpsl.c  app_mpsl.h  mpsl-esb-overlay.conf
